Add download deck feature.

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
   <form action="get/" method="get">
     <p><b>Input drug names. One per line.</b></p>
     <p><textarea rows="10" cols="45" name="search"></textarea></p>
+    <label>Show JSON instead of downloading a deck.<input type="checkbox" name="show_json"/></label>
     <p><input type="submit" value="Submit"></p>
   </form>
 
