Add some custom fields on index page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,11 @@
     <p><textarea rows="10" cols="45" name="search"></textarea></p>
     <label>Show JSON instead of downloading a deck.<input type="checkbox" name="show_json"/></label>
     <p><input type="submit" value="Submit"></p>
+    <hr>
+    <label>Cascading style sheets (CSS table)<p><textarea rows="10" cols="45" name="css">{{ css }}</textarea></p></label>
+    <label>Question template<p><textarea rows="10" cols="45" name="qfmt">{{ qfmt }}</textarea></p></label>
+    <label>Answer template<p><textarea rows="10" cols="45" name="afmt">{{ afmt }}</textarea></p></label>
+
   </form>
 
  </body>
